# LibComm

./: .editorconfig  CMakeLists.txt
.github/workflows/: cmake.yml
cmake/: LibCommConfig.cmake.in
include/Comm/: Comm_Tools.h
include/Comm/Comm_Assemble/: Comm_Assemble.h  Comm_Assemble.hpp
include/Comm/Comm_Keys/: Comm_Keys_31-gather.h  Comm_Keys_31-gather.hpp  Comm_Keys_31-sr.h  Comm_Keys_31-sr.hpp  Comm_Keys_32-gather.h  Comm_Keys_32-gather.hpp  Comm_Keys_32-sr.h  Comm_Keys_32-sr.hpp
include/Comm/Comm_Trans/: Comm_Trans.h  Comm_Trans.hpp
include/Comm/example/: Communicate_Map-1.h  Communicate_Map-2.h  Communicate_Set.h  Communicate_Vector.h
include/Comm/global/: Cereal_Func.h  Cereal_Func.hpp  Cereal_Types.h  Global_Func.h  Global_Func.hpp  MPI_Wrapper.h
unittests/: Test_All.hpp  print_stl.h
unittests/Comm_Assemble/: Communicate_Map-test-2.hpp  Communicate_Map-test-speed.hpp
unittests/Comm_Keys/: Comm_Keys_3-test.hpp
unittests/Comm_Trans/: Communicate_Map-test-1.hpp
unittests/global/: Cereal_Test.hpp
